...
  var meetingRequestOption by remember { mutableStateOf(MeetingRequestOption.INBOX) }
  var alertDialogSent by remember { mutableStateOf(false) }
  var sentSelectedProfile = remember { mutableStateOf<Profile?>(null) }
  val myProfile = profileViewModel.selfProfile.collectAsState()
  if (alertDialogSent) {
    AlertDialog(
        modifier = Modifier.testTag("confirmDialog"),
        onDismissRequest = { alertDialogSent = false },
        title = { Text("Do you want to cancel this meeting request?") },
        confirmButton = {
          TextButton(
              onClick = {
                meetingRequestViewModel.sendCancellationToBothUsers(
                    sentSelectedProfile.value?.uid ?: "null",
                    sentSelectedProfile.value?.fcmToken ?: "",
                    sentSelectedProfile.value?.name ?: "",
                    MeetingRequestViewModel.CancellationType.CANCELLED)
                alertDialogSent = false
              }) {
                Text("Yes")
              }
        },
        dismissButton = { TextButton(onClick = { alertDialogSent = false }) { Text("No") } })
  }
  Scaffold(
      modifier = Modifier.testTag("notificationScreen"),
      topBar = { TopBar(stringResource(R.string.notifications_screen_title)) },
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route ->
              if (route.route != Route.NOTIFICATIONS) {
                navigationActions.navigateTo(route)
              }
...
      verticalAlignment = Alignment.CenterVertically) {
        MeetingRequestButton(
            option = MeetingRequestOption.INBOX,
            isSelected = selectedOption == MeetingRequestOption.INBOX,
            onClick = { onOptionSelected(MeetingRequestOption.INBOX) },
            badgeCount = inboxSize,
            modifier = Modifier.weight(MEETING_REQUEST_BUTTON_SIZE).testTag("inboxButton"))

        MeetingRequestButton(
            option = MeetingRequestOption.SENT,
            isSelected = selectedOption == MeetingRequestOption.SENT,
            onClick = { onOptionSelected(MeetingRequestOption.SENT) },
            badgeCount = SENT_SIZE,
            modifier = Modifier.weight(MEETING_REQUEST_BUTTON_SIZE).testTag("sentButton"))
      }
}

@Composable
private fun MeetingRequestButton(
    option: MeetingRequestOption,
...
