...
              }
          OutlinedTextField(
              value = value,
              onValueChange = { onValueChange(it) },
              label = { Text("Your message") },
              trailingIcon = {
                IconButton(onClick = { onSendClick() }, modifier = Modifier.testTag("sendButton")) {
                  Icon(
                      imageVector = Icons.AutoMirrored.Default.Send,
                      contentDescription = "send button")
                }
              },
              modifier =
                  Modifier.width(TEXT_FIELD_WIDTH)
                      .height(TEXT_FIELD_HEIGHT * 2)
                      .testTag("messageTextField"),
          )
          Row(
              verticalAlignment = Alignment.CenterVertically,
              modifier = Modifier.width(ROW_WIDTH).height(ROW_HEIGHT)) {
                TextButton(
                    onClick = { onCancelClick() },
                    enabled = true,
                    modifier = Modifier.padding(start = BOTTOM_PADDING).testTag("cancelButton")) {
                      Text("Cancel")
                    }
              }
          Spacer(Modifier)
        }
      }
...
